--- a/club/index.html
+++ b/club/index.html
@@ -18,7 +18,7 @@
     <script
       async
       defer
-      src="./club.js?pkey=hi-there&onload=scriptReady"
+      src="/club/club.js?pkey=hi-there&onload=scriptReady"
     ></script>
   </body>
 </html>
