render localhost over https

--- a/club/index.html
+++ b/club/index.html
@@ -6,7 +6,7 @@
     <div id="status">Loading popup...</div>
     <br />
     <button id="open" onclick="javascript:openPopup('https://club-embed.rbt.cgws.com.au/')">Open RBT</button>
-    <button id="open" onclick="javascript:openPopup('http://localhost:3000/')">Open localhost</button>
+    <button id="open" onclick="javascript:openPopup('https://localhost:3000/')">Open localhost</button>
     <script>
       function scriptReady() {
         document.getElementById('status').innerHTML = 'Popup loaded';
