--- a/club/index.html
+++ b/club/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <div id="status">Loading popup...</div>
+    <h1>Club embed</h1>
     <br />
     <button id="open" onclick="javascript:openPopup('https://club-embed.rbt.cgws.com.au/')">Open RBT</button>
     <button id="open" onclick="javascript:openPopup('https://localhost:3000/')">Open localhost</button>
